# django-app-example

./: .gitignore  README.md  guide.txt  pyproject.toml  requirements.txt
config/: .env.example
server/: settings.py
server/apps/myApps/: apps.py
