[project]
name = "remotech"
version = "0.1.0"
description = "Remote Challenge - Web based learning system with gamification"
authors = [
    {name = "Fauzan Hidayat",email = "fauzanhidayat679@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
